<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="au.com.infotrak.infotrakmobile.EquipmentSearchActivity"
    android:id="@+id/layout">

    <au.com.infotrak.infotrakmobile.controls.ClearableAutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/autoCustomer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_customer" />

    <Spinner
        android:id="@+id/cboJobsite"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/autoCustomer"
        android:prompt="@string/Jobsite"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/cboModel"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cboJobsite"
        android:prompt="@string/Model"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtSelectEquipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStoreEquipment"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btnStoreEquipment"
        android:text="@string/select_equipment"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnStoreEquipment"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/cboModel"
        android:text="@string/add_equipment"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/listEquipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnStoreEquipment" />


</RelativeLayout>
