<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/infotrak_yellow"
    tools:context="au.com.infotrak.infotrakmobile.Login"
    android:id="@+id/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/uc_login"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="3"
            android:gravity="center"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/btnUpdate"
        android:background="@color/login_button_red"
        android:textColor="@color/uc_white"
        android:textSize="14sp"
        android:layout_marginBottom="58dp"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/txtDownloadPercentage"/>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="3">

            <EditText
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtUser"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:hint="@string/lblUserName" />

            <EditText
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtPassword"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:password="true"
                android:hint="@string/lblPassword" />

            <CheckBox
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_style"
                android:textSize="14sp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/lblRememberMe"
                android:id="@+id/chkRememberMe" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblLogin"
                android:id="@+id/btnLogin"
                android:background="@color/login_button_red"
                android:textColor="@color/uc_white"
                android:textSize="14sp"
                android:layout_marginBottom="58dp" />
        </LinearLayout>



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:visibility="invisible"
        android:id="@+id/txtMessage"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="61dp" />








</RelativeLayout>
