
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80808080"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/layoutSteps">

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:id="@+id/btnEquipmentSelection"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:id="@+id/btnEquipmentDetails"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:id="@+id/btnEquipmentConditions"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:id="@+id/btnInspect"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:id="@+id/btnSyncMenu"/>

    </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/maincontent">

    <Button
        android:id="@+id/btnNewEquipment"
        android:layout_marginTop="0dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_equipment"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="45dp"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_height="330dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnNewEquipment"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/listView"
        android:layout_alignRight="@+id/listView"

        android:layout_gravity="right"
        android:text="Add" />

    <Button
        android:id="@+id/btnSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="Sync" />

</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnSaveToFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/save_to_file" />
            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/clear_equip_list" />
        </LinearLayout>
        <Button
            android:visibility="gone"
            android:id="@+id/btnImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/import_inspections" />
    </LinearLayout>
</RelativeLayout>
